--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -34,7 +34,6 @@ $SemiBold:500;
 $bold:600;
 $ExtraBold:700;
 
-
 // Color System
 
 $whiteColor: #ffffff;
@@ -98,6 +97,7 @@ $borderRadius:20px;
 $borderTop:1px solid #3d3d3d;
 $borderBottom:1px solid #e4e4e4;
 $btnMenu:1px solid #000000;
+$FormBottom: 1px solid #9c9c9c;
 
 // $popUpsBorderRadius:;
 
