--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -17,6 +17,7 @@ $MediumTitle :1.2rem;
 $regularText:1rem;
 $smallText:0.9rem;
 $xSmallText:0.8rem;
+$xxSmallText:0.7rem;
 $breakText:0.5rem;
 // $smallTitle:0.8rem;
 // $breakSmallText:0.7rem;
