--- a/scss/_sign_In_&_Create_Account.scss
+++ b/scss/_sign_In_&_Create_Account.scss
@@ -328,7 +328,7 @@
         top:0px;
         right:0%;
         z-index: 1;
-        background-color: #000000;
+        background-color: $blackColor;
         animation: getoff 0.5s linear;
         @keyframes getoff{
             0%{
@@ -356,7 +356,7 @@
                     .wishlistIcon, .cartIcon{
                         cursor: pointer;
                         transform: scale(100%);
-                        transition: transform 0.3s ease-in-out;
+                        transition: $transition;
                         &:hover{
                             transform: scale(120%);
                             filter:drop-shadow(0 0 10px #696061);
@@ -382,12 +382,12 @@
                     left:-70px;
                     background-color: rgb(0, 0, 0);
                     transform: translate(-100%);
-                    transition: all 0.2s ease-in-out;
+                    transition: $transition;
                     .toolTipMessage{
                         margin: 5px 10px;
-                        font-size: 0.7rem;
-                        font-weight: 700;
-                        color: #ffffff;
+                        font-size: $xxSmallText;
+                        font-weight:$ExtraBold;
+                        color: $whiteColor;
                         font-family: $fontJura;
                     }
                 }
@@ -410,19 +410,19 @@
         flex-direction: column;
         justify-content:space-between;
         align-items: flex-start;
-        background-color: #141414;
+        background-color: $tertiaryColor;
         overflow: hidden;
-        box-shadow: 0 0 10px 6px #070707;
+        box-shadow:$boxShadowMenu;
         z-index: 10;
         transform: translate(-105%);
-        transition: .3s ease-in-out;
+        transition: $transition;
         .top{
             width:100%;
             display: flex;
             flex-direction: row;
             justify-content: space-between;
             align-items: center;
-            background-color: #181818;
+            background-color: $secondaryBackground;
             padding: 10px 10px 10px 30px;
             .brand{
                 width:45px;
@@ -433,7 +433,7 @@
                     width:25px;
                     cursor: pointer;
                     transform: rotate(0deg);
-                    transition: all 0.3s ease-in-out;
+                    transition: $transition;
                     &:hover{
                         transform: rotate(90deg);
                     }
@@ -453,7 +453,7 @@
                     width: 100%;
                     list-style-type: none;
                     cursor: pointer;
-                    background-color: #141414;
+                    background-color: $secondaryBackground;
                     .link{
                         display: block;
                         width: inherit;
@@ -461,10 +461,10 @@
                         padding-bottom:10px;
                         padding-left: 30px;
                         padding-right: 100px;
-                        font-size: 0.9rem;
+                        font-size:$smallText;
                         font-family: $fontJura;
-                        color:#ffffff;
-                        font-weight: 600;
+                        color:$whiteColor;
+                        font-weight:$bold;
                         text-decoration: none;
                         &:hover{
                             background-color: #bc232859;
@@ -476,14 +476,14 @@
                         .link{
                             display: block;
                             width:100%;
-                            font-size: 0.9rem;
+                            font-size: $smallText;
                             font-family: $fontJura;
-                            color:#ffffff;
-                            font-weight: 600;
+                            color:$whiteColor;
+                            font-weight: $bold;
                             margin: 0px auto 0px 0px;
                             padding-bottom: 15px;
-                            border-bottom: 1px solid #6b6b6b;
-                            transition: all 0.3s ease;
+                            border-bottom: $FormBottom;
+                            transition: $transition;
                             &:hover{
                                 background-color: #bc232859;
                             }
@@ -498,16 +498,16 @@
             flex-direction: column;
             justify-content: space-around;
             align-items: flex-start;
-            background-color: #181818;
+            background-color: $tertiaryColor;
             padding-top: 10px;
             p{
                 width:100%;
-                font-size: 0.9rem;
+                font-size: $smallText;
                 font-family: $fontJura;
-                color:#ffffff;
-                font-weight: 600;
+                color:$whiteColor;
+                font-weight:$bold;
                 padding-left: 30px;
-                border-bottom: 1px solid #6b6b6b;
+                border-bottom: $FormBottom;
                 padding-bottom: 15px;
             }
             ul{
